# magma

./: .gitignore
.circleci/: config.yml
circleci/: fabfile.py
cwf/cloud/go/services/cwf/obsidian/models/: cwf_gateway_swaggergen.go  mutable_cwf_gateway_swaggergen.go
feg/cloud/go/services/feg/obsidian/models/: federation_gateway_swaggergen.go  mutable_federation_gateway_swaggergen.go
lte/cloud/go/protos/: subscriberauth.pb.go  subscriberdb.pb.go
lte/cloud/go/protos/mconfig/: mconfigs.pb.go
lte/cloud/go/services/lte/obsidian/handlers/: handlers.go  handlers_test.go
lte/cloud/go/services/lte/obsidian/models/: lte_gateway_swaggergen.go  mutable_lte_gateway_swaggergen.go  (+2 more)
lte/gateway/: fabfile.py
lte/gateway/c/oai/tasks/amf/: amf_authentication.cpp
lte/gateway/python/scripts/: config_stateless_agw.py  generate_oai_config.py  pipelined_cli.py
lte/gateway/python/scripts/helpers/: ng_set_session_msg.py
lte/protos/: subscriberauth.proto
lte/protos/mconfig/: mconfigs.proto
orc8r/cloud/go/mproto/test/: test.pb.go
orc8r/cloud/go/obsidian/: handler.go
orc8r/cloud/go/obsidian/swagger/: lte_auth_op_validator.go
orc8r/cloud/go/obsidian/swagger/v1/: swagger.yml
src/go/agwd/config/: config.go  config_test.go
src/go/agwd/server/: BUILD.bazel  server.go
src/go/capture/: BUILD.bazel  main.go
src/go/capture/resources/s1aptests/: test_attach_detach.py.golden
src/go/middleware/: BUILD.bazel  middleware.go  middleware_test.go
src/go/middleware/mock_middleware/: BUILD.bazel  mock_middleware_test.go
src/go/protos/magma/mconfig/: mconfigs.pb.go
(+13 files in other folders)
