load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "middleware",
    srcs = ["middleware.go"],
    importpath = "github.com/magma/magma/src/go/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//src/go/protos/magma/capture",
        "//src/go/protos/magma/mconfig",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)

go_test(
    name = "middleware_test",
    srcs = ["middleware_test.go"],
    embed = [":middleware"],
    deps = [
        "//src/go/protos/magma/mconfig",
        "@com_github_stretchr_testify//assert",
    ],
)
